Feat: BUG-Frontsystem, Vehicle Health, Fuel-Refill, Controller-Support, Smooth Rendering
- BUG block als einziger Frontmarker (ersetzt Thruster-Richtungslogik)
  - Genau 1 BUG pro Fahrzeug, muss an Außenkante sein
  - FACING-Property definiert Vorwärtsrichtung exklusiv
  - Fahrzeuge ohne BUG nicht fahrbereit
  - Assembly-Validierung + Builder-UI zeigt BUG-Status

- Thruster nur noch Schub/Dekoration, keine Richtungsautorität

- Vehicle Health System (100 HP)
  - Kollisionsschaden ab 5+ blocks/sec
  - Angriffe, Explosionen
  - HP-Bar im HUD
  - Bei 0 HP: Disassembly + Passagier-Eject

- Fuel-Refill Fix: Rechtsklick mit Holz/Logs tankt auf
  - Sofortige Server→Client Sync
  - Item-Verbrauch, Tank-voll-Meldung

- Smooth Rendering: Yaw-Interpolation, Block-Rotation mit Entity
  - Speed-Skalierung korrigiert (blocks/sec → blocks/tick)
  - Sanfterer Drag + Acceleration Lerp

- Controller-Support (GLFW): Left Stick, Right Stick, Triggers
- Build Mode erneut aktivierbar (Tutorial-Stage-Reset)
- 7 neue BUG-Tests + alle bestehenden Tests aktualisiert