@@ -9,10 +9,9 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Unit tests for ThrusterRequirements and ShipAssemblyService validation logic.
- * All tests run without a real Minecraft server (pure-Java classes only).
+ * Unit tests for ThrusterRequirements, BUG validation, and ShipAssemblyService logic.
  */
-@DisplayName("ShipAssembly / ThrusterRequirements Tests")
+@DisplayName("ShipAssembly / ThrusterRequirements / BUG Tests")
 class ShipAssemblyServiceTest {
 
     // ─── hasThruster ──────────────────────────────────────────────────────────
@@ -20,29 +19,25 @@ class ShipAssemblyServiceTest {
     @Test
     @DisplayName("hasThruster: detects single thruster block")
     void detectsThrusters() {
-        assertTrue(ThrusterRequirements.hasThruster(List.of("sharkengine:thruster")),
-                "Thruster block should be detected");
+        assertTrue(ThrusterRequirements.hasThruster(List.of("sharkengine:thruster")));
     }
 
     @Test
-    @DisplayName("hasThruster: returns false with no thrusters (only planks)")
+    @DisplayName("hasThruster: returns false with no thrusters")
     void detectsMissingThrusters() {
-        assertFalse(ThrusterRequirements.hasThruster(List.of("minecraft:oak_planks")),
-                "Structure without thruster must be reported as missing thrusters");
+        assertFalse(ThrusterRequirements.hasThruster(List.of("minecraft:oak_planks")));
     }
 
     @Test
     @DisplayName("hasThruster: returns false for empty block list")
     void emptyList_noThruster() {
-        assertFalse(ThrusterRequirements.hasThruster(Collections.emptyList()),
-                "Empty structure has no thruster");
+        assertFalse(ThrusterRequirements.hasThruster(Collections.emptyList()));
     }
 
     @Test
-    @DisplayName("hasThruster: returns false for null input (defensive)")
+    @DisplayName("hasThruster: returns false for null input")
     void nullList_noThruster() {
-        assertFalse(ThrusterRequirements.hasThruster(null),
-                "Null block list should return false, not throw");
+        assertFalse(ThrusterRequirements.hasThruster(null));
     }
 
     // ─── countThrusters ───────────────────────────────────────────────────────
@@ -50,11 +45,7 @@ class ShipAssemblyServiceTest {
     @Test
     @DisplayName("countThrusters: counts multiple thruster blocks")
     void countsMultipleThrusters() {
-        List<String> blocks = List.of(
-                "sharkengine:thruster",
-                "minecraft:oak_planks",
-                "sharkengine:thruster"
-        );
+        List<String> blocks = List.of("sharkengine:thruster", "minecraft:oak_planks", "sharkengine:thruster");
         assertEquals(2, ThrusterRequirements.countThrusters(blocks));
     }
 
@@ -65,135 +56,129 @@ class ShipAssemblyServiceTest {
     }
 
     @Test
-    @DisplayName("countThrusters: returns 0 for null list (defensive)")
+    @DisplayName("countThrusters: returns 0 for null list")
     void countThrusters_null() {
         assertEquals(0, ThrusterRequirements.countThrusters(null));
     }
 
     @Test
-    @DisplayName("countThrusters: only exact ID 'sharkengine:thruster' matches")
+    @DisplayName("countThrusters: only exact ID matches")
     void countThrusters_partialIdDoesNotMatch() {
-        // Substrings or similar IDs must NOT be counted
-        List<String> blocks = List.of(
-                "sharkengine:thruster_mk2",   // future block, different ID
-                "minecraft:thruster",          // wrong namespace
-                "SHARKENGINE:THRUSTER"         // wrong case
-        );
-        assertEquals(0, ThrusterRequirements.countThrusters(blocks),
-                "Only exact ID 'sharkengine:thruster' should match");
+        List<String> blocks = List.of("sharkengine:thruster_mk2", "minecraft:thruster", "SHARKENGINE:THRUSTER");
+        assertEquals(0, ThrusterRequirements.countThrusters(blocks));
     }
 
-    // ─── StructureScan.canAssemble ────────────────────────────────────────────
+    // ─── StructureScan.canAssemble (with BUG) ────────────────────────────────
+
+    /** Helper to build a valid scan with BUG defaults */
+    private static ShipAssemblyService.StructureScan makeScan(
+            List<ShipBlueprint.ShipBlock> blocks,
+            List<net.minecraft.core.BlockPos> invalidAttachments,
+            int contactPoints, boolean hasThruster, int thrusterCount, int coreNeighbors,
+            int bugCount, boolean bugOnEdge) {
+        return new ShipAssemblyService.StructureScan(
+                null, blocks, invalidAttachments, contactPoints,
+                hasThruster, thrusterCount, coreNeighbors,
+                bugCount, bugOnEdge, 0.0f
+        );
+    }
 
     @Test
-    @DisplayName("StructureScan.canAssemble: true when all constraints met")
+    @DisplayName("canAssemble: true when all constraints met including BUG")
     void structureScan_canAssemble_whenValid() {
-        var scan = new ShipAssemblyService.StructureScan(
-                null,                                          // origin (not needed for this logic)
-                List.of(fakeBlock()),                         // at least one block
-                Collections.emptyList(),                      // no invalid attachments
-                0,                                             // no terrain contact
-                true,                                          // has thruster
-                1,                                             // thruster count
-                4                                             // core neighbours satisfied
-        );
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 1, true);
         assertTrue(scan.canAssemble());
     }
 
     @Test
-    @DisplayName("StructureScan.canAssemble: false when no thruster")
+    @DisplayName("canAssemble: false when no thruster")
     void structureScan_cannotAssemble_noThruster() {
-        var scan = new ShipAssemblyService.StructureScan(
-                null,
-                List.of(fakeBlock()),
-                Collections.emptyList(),
-                0,
-                false,   // <-- no thruster
-                0,
-                4
-        );
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, false, 0, 4, 1, true);
         assertFalse(scan.canAssemble());
     }
 
     @Test
-    @DisplayName("StructureScan.canAssemble: false when terrain contact exists")
+    @DisplayName("canAssemble: false when terrain contact exists")
     void structureScan_cannotAssemble_terrainContact() {
-        var scan = new ShipAssemblyService.StructureScan(
-                null,
-                List.of(fakeBlock()),
-                Collections.emptyList(),
-                1,       // <-- terrain contact
-                true,
-                1,
-                4
-        );
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                1, true, 1, 4, 1, true);
         assertFalse(scan.canAssemble());
     }
 
     @Test
-    @DisplayName("StructureScan.canAssemble: false when invalid attachments present")
+    @DisplayName("canAssemble: false when invalid attachments present")
     void structureScan_cannotAssemble_invalidAttachments() {
         var invalidPos = new net.minecraft.core.BlockPos(0, 0, 0);
-        var scan = new ShipAssemblyService.StructureScan(
-                null,
-                List.of(fakeBlock()),
-                List.of(invalidPos),  // <-- invalid attachment
-                0,
-                true,
-                1,
-                4
-        );
+        var scan = makeScan(List.of(fakeBlock()), List.of(invalidPos),
+                0, true, 1, 4, 1, true);
         assertFalse(scan.canAssemble());
     }
 
     @Test
-    @DisplayName("StructureScan.canAssemble: false when fewer than 4 core neighbours")
+    @DisplayName("canAssemble: false when fewer than 4 core neighbours")
     void structureScan_cannotAssemble_insufficientCoreNeighbours() {
-        var scan = new ShipAssemblyService.StructureScan(
-                null,
-                List.of(fakeBlock()),
-                Collections.emptyList(),
-                0,
-                true,
-                1,
-                3    // <-- only 3 neighbours
-        );
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 3, 1, true);
         assertFalse(scan.canAssemble());
     }
 
     @Test
-    @DisplayName("StructureScan.canAssemble: false when block list is empty")
+    @DisplayName("canAssemble: false when block list is empty")
     void structureScan_cannotAssemble_emptyBlocks() {
-        var scan = new ShipAssemblyService.StructureScan(
-                null,
-                Collections.emptyList(),   // <-- empty
-                Collections.emptyList(),
-                0,
-                true,
-                1,
-                4
-        );
+        var scan = makeScan(Collections.emptyList(), Collections.emptyList(),
+                0, true, 1, 4, 1, true);
         assertFalse(scan.canAssemble());
     }
 
+    // ─── BUG-specific validation ─────────────────────────────────────────────
+
     @Test
-    @DisplayName("StructureScan.blockCount: matches block list size")
+    @DisplayName("canAssemble: false when no BUG block (bugCount=0)")
+    void structureScan_cannotAssemble_noBug() {
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 0, false);
+        assertFalse(scan.canAssemble(), "Ship without BUG must not be assemblable");
+    }
+
+    @Test
+    @DisplayName("canAssemble: false when multiple BUG blocks (bugCount=2)")
+    void structureScan_cannotAssemble_multipleBugs() {
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 2, true);
+        assertFalse(scan.canAssemble(), "Ship with multiple BUGs must not be assemblable");
+    }
+
+    @Test
+    @DisplayName("canAssemble: false when BUG is inside (not on edge)")
+    void structureScan_cannotAssemble_bugInside() {
+        var scan = makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 1, false);
+        assertFalse(scan.canAssemble(), "BUG inside ship must block assembly");
+    }
+
+    @Test
+    @DisplayName("hasBug: returns true only when exactly 1 BUG")
+    void structureScan_hasBug() {
+        assertTrue(makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 1, true).hasBug());
+        assertFalse(makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 0, false).hasBug());
+        assertFalse(makeScan(List.of(fakeBlock()), Collections.emptyList(),
+                0, true, 1, 4, 2, true).hasBug());
+    }
+
+    @Test
+    @DisplayName("blockCount: matches block list size")
     void structureScan_blockCount_matchesList() {
         var blocks = List.of(fakeBlock(), fakeBlock(), fakeBlock());
-        var scan = new ShipAssemblyService.StructureScan(
-                null, blocks, Collections.emptyList(), 0, true, 1, 4
-        );
+        var scan = makeScan(blocks, Collections.emptyList(), 0, true, 1, 4, 1, true);
         assertEquals(3, scan.blockCount());
     }
 
     // ─── Helper ───────────────────────────────────────────────────────────────
 
-    /**
-     * Creates a minimal ShipBlock for testing.
-     * BlockState is {@code null} because assembly-validation logic (canAssemble,
-     * blockCount, etc.) never inspects the block's state – only the offset and
-     * count matter in these pure-Java tests.
-     */
     private static ShipBlueprint.ShipBlock fakeBlock() {
         return new ShipBlueprint.ShipBlock(0, 0, 0, null);
     }
